<resources>
    <string name="app_name">Weather</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="address">address</string>
    <string name="currentdate">30/10/2020</string>
    <string name="current_status">current status</string>
    <string name="currentdegree">14 C</string>
    <string name="_2_am">2 Am</string>
    <string name="degree">5 C</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="language">Language</string>
    <string name="arabic">Arabic</string>
    <string name="tempreture">Tempreture</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="mile_hour">Mile/hour</string>
    <string name="notifications">notifications</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="location">Location</string>
    <string name="english">English</string>
    <string name="humidity">Humidity</string>
    <string name="windspeed">Wind speed</string>
    <string name="pressure">pressure</string>
    <string name="tempe_min">tempe min</string>
    <string name="temp_max">temp max</string>
    <string name="favourite_location">favourite location</string>
</resources>