<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.favourit.FavouriteDetailsFragment"
        android:background="@drawable/background2"
        android:id="@+id/fram_fav_detals"

        >

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/address"
                    android:textColor="#fff"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/current_address_fav_details"
                    android:textSize="@dimen/_16ssp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/current_address_fav_details"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/currentdate"
                    android:id="@+id/current_date_fav_details"
                    android:textColor="#fff"
                    android:textSize="@dimen/_10ssp" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200sdp"
                    app:cardCornerRadius="@dimen/_25ssp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:cardBackgroundColor="#80CFEFED"
                    android:id="@+id/card_current_fav_details"
                    app:layout_constraintTop_toBottomOf="@id/current_date_fav_details"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="@dimen/_120sdp"
                            android:layout_height="@dimen/_80sdp"
                            android:layout_margin="@dimen/_10sdp"
                            android:src="@drawable/cloudicon"
                            android:id="@+id/img_icon_fav_details"
                            app:layout_constraintStart_toStartOf="parent"

                            app:layout_constraintTop_toTopOf="parent" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/status_current_fav_details"
                            android:text="@string/current_status"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/_15sdp"
                            android:textColor="#fff"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toEndOf="@id/img_icon_fav_details"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:textSize="@dimen/_25ssp" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/currentdegree"
                            android:id="@+id/current_degree_fav_details"
                            app:layout_constraintTop_toBottomOf="@+id/status_current_fav_details"
                            app:layout_constraintStart_toEndOf="@id/img_icon_fav_details"
                            android:layout_margin="@dimen/_10sdp"
                            android:textSize="@dimen/_23sdp"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:textColor="#fff"

                            />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/current_temp_min_fav_details"
                            app:layout_constraintTop_toBottomOf="@+id/current_degree_fav_details"
                            app:layout_constraintStart_toEndOf="@id/img_icon_fav_details"
                            android:layout_margin="@dimen/_20sdp"
                            android:textSize="@dimen/_15sdp"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:textColor="#fff"

                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/current_temp_max_fav_details"
                            app:layout_constraintTop_toBottomOf="@+id/current_degree_fav_details"
                            app:layout_constraintStart_toEndOf="@id/current_temp_min_fav_details"
                            android:layout_margin="@dimen/_20sdp"
                            android:textSize="@dimen/_15sdp"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:textColor="#fff"

                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Clouds"
                            android:id="@+id/current_clouds"
                            app:layout_constraintTop_toBottomOf="@+id/current_temp_max_fav_details"
                            app:layout_constraintStart_toEndOf="@id/img_icon_fav_details"
                            android:layout_margin="@dimen/_10sdp"
                            android:textSize="@dimen/_15sdp"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:textColor="#fff"

                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/humidity"
                            android:id="@+id/current_humedity_fav_details"
                            app:layout_constraintTop_toBottomOf="@+id/img_icon_fav_details"
                            android:layout_margin="@dimen/_10sdp"
                            app:layout_constraintStart_toStartOf="parent"
                            android:textSize="@dimen/_15sdp"
                            android:textColor="#fff"

                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/windspeed"
                            android:id="@+id/current_wind_fav_details"
                            app:layout_constraintTop_toBottomOf="@+id/current_humedity_fav_details"
                            android:layout_margin="@dimen/_10sdp"
                            app:layout_constraintStart_toStartOf="parent"
                            android:textSize="@dimen/_15sdp"
                            android:textColor="#fff"

                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pressure"
                            android:id="@+id/current_pressure_fav_details"
                            app:layout_constraintTop_toBottomOf="@+id/current_wind_fav_details"
                            android:layout_margin="@dimen/_10sdp"
                            app:layout_constraintStart_toStartOf="parent"
                            android:textSize="@dimen/_15sdp"
                            android:textColor="#fff"

                            />


                    </androidx.constraintlayout.widget.ConstraintLayout>


                </com.google.android.material.card.MaterialCardView>


                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/recycler_hour_fav_details"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card_current_fav_details"
                    tools:itemCount="10"

                    tools:listitem="@layout/item_current_hours"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal"
                    android:layout_marginBottom="@dimen/_50sdp"

                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_day_fav_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recycler_hour_fav_details"
                    tools:itemCount="10"
                    tools:listitem="@layout/item_next"

                    />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </FrameLayout>
</layout>